# Retail_Application_Scorecard

./: .gitignore  pyproject.toml  readme.md  requirements.txt
configs/: config.yaml
inputs/: sample.csv
models/: logistic_model.pkl  scorecard_points.csv  woe_bins.pkl
notebooks/: 01_data_inspection.ipynb  02_target_definition_and_leakage.ipynb  03_eda_and_univariate_analysis.ipynb  04_time_split_and_sampling_strategy.ipynb  05_feature_engineering.ipynb  06_woe_binning_iv_analysis.ipynb  07_logistic_regression_scorecard.ipynb  08_model_benchmarking.ipynb  09_validation_and_stability.ipynb  10_score_scaling_and_cutoffs_short.ipynb  11_model_governance.ipynb  12_impl_checks.ipynb
outputs/: scored_sample.csv
src/scorecard/: __init__.py  feature_engineering.py  model.py  predict.py  preprocessing.py  scoring.py  utils.py  woe.py
tests/: test_feature_engineering.py  test_scoring.py  test_woe.py
