[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-scorecard"
version = "0.1.0"
description = "Production package for a WOE logistic regression credit risk scorecard."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "optbinning",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "openpyxl",
]

[project.scripts]
scorecard-predict = "scorecard.predict:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
